# AxumBasis

./: .env  Cargo.toml  README.md  build.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20251021_093142_create_user.rs  m20251021_103626_create_user.rs  m20251021_135338_add_user_email.rs
proto/: api.proto
src/: app.rs  common.rs  domain.rs  main.rs
src/common/: bootstap.rs  bootstrap.rs  config.rs  db.rs  extractor.rs  response.rs
src/common/middleware/: log.rs
src/domain/: auth.rs  herax.rs  task.rs
src/domain/auth/api/: handler.rs  router.rs
src/domain/auth/domain/: service.rs
src/domain/auth/dto/: auth_dto.rs
src/domain/auth/infra/: repo.rs
src/domain/herax/api/: handler.rs  router.rs
src/domain/herax/dto/: ping_dto.rs
src/domain/herax/infra/: grpc_client.rs  grpc_server.rs
src/domain/task/api/: handler.rs  router.rs
src/domain/task/domain/: service.rs
src/domain/task/infra/: repo.rs
src/dto/: auth_dto.rs  mod.rs  task_dto.rs
src/entities/: mod.rs  prelude.rs  tasks.rs  users.rs
src/extractor/: mod.rs
src/middleware/: auth.rs  log.rs  mod.rs
src/response/: mod.rs
src/router/: auth_router.rs  draft_router.rs  mod.rs  task_router.rs
src/service/: auth_service.rs
