[package]
name = "axumbasis"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
validator = { version = "0.20.0", features = ["derive"] }
sea-orm = { version = "1.1", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
dotenvy = "0.15.7"
bcrypt = "0.17.1"
anyhow = "1.0.100"

[workspace]
members = [".", "migration"]
